# COMPILER-C

./: README.md  pyproject.toml
examples/: hello.c  hello.ll
src/cc/: __init__.py  ast_nodes.py  cli.py  codegen.py  lexer.py  parser.py  symbols.py  tokens.py
src/cc_llvm_mini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
