[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-llvm-mini"
version = "0.1.0"
description = "A minimal C-subset compiler emitting LLVM IR (.ll)"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ccmini = "cc.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]



